Added button on Blue LED
Debounced Button to turn on Blue LED. ToDo: Change to using interrupt to read button.

--- a/HW3_(blinky)/Blinky_Demo.ioc
+++ b/HW3_(blinky)/Blinky_Demo.ioc
@@ -85,12 +85,11 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-PA0-WKUP1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA0-WKUP1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0-WKUP1.GPIO_Label=My_Button
-PA0-WKUP1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-PA0-WKUP1.GPIO_PuPd=GPIO_NOPULL
+PA0-WKUP1.GPIO_PuPd=GPIO_PULLUP
 PA0-WKUP1.Locked=true
-PA0-WKUP1.Signal=GPXTI0
+PA0-WKUP1.Signal=GPIO_Input
 PA1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA1.GPIO_Label=SEG0 [GH08172T_SEG0]
 PA1.GPIO_Mode=GPIO_MODE_AF_PP
@@ -451,8 +450,6 @@ RCC.TIMFreq_Value=32000000
 RCC.TimerFreq_Value=32000000
 RCC.USBOutput=48000000
 RCC.VCOOutputFreq_Value=96000000
-SH.GPXTI0.0=GPIO_EXTI0
-SH.GPXTI0.ConfNb=1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=STM32L152C-DISCO
