HW5 updated with non-blocking console code.

--- a/HW5_(STM32F4-Console)/STM32F4-Console.ioc
+++ b/HW5_(STM32F4-Console)/STM32F4-Console.ioc
@@ -16,18 +16,19 @@ Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PB6
-Mcu.Pin11=PB7
-Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin10=PA14
+Mcu.Pin11=PB6
+Mcu.Pin12=PB7
+Mcu.Pin13=VP_SYS_VS_Systick
 Mcu.Pin2=PH0 - OSC_IN
 Mcu.Pin3=PH1 - OSC_OUT
-Mcu.Pin4=PD12
-Mcu.Pin5=PD13
-Mcu.Pin6=PD14
-Mcu.Pin7=PD15
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=13
+Mcu.Pin4=PA0-WKUP
+Mcu.Pin5=PD12
+Mcu.Pin6=PD13
+Mcu.Pin7=PD14
+Mcu.Pin8=PD15
+Mcu.Pin9=PA13
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -35,6 +36,7 @@ MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -43,7 +45,14 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA0-WKUP.GPIO_Label=MY_BUTTON
+PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPXTI0
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=SWDIO
 PA13.Locked=true
@@ -70,25 +79,25 @@ PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PD12.GPIO_Label=LD4 [Green Led]
+PD12.GPIO_Label=LED_GREEN
 PD12.GPIO_PuPd=GPIO_NOPULL
 PD12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD12.Locked=true
 PD12.Signal=GPIO_Output
 PD13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PD13.GPIO_Label=LD3 [Orange Led]
+PD13.GPIO_Label=LED_ORANGE
 PD13.GPIO_PuPd=GPIO_NOPULL
 PD13.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD13.Locked=true
 PD13.Signal=GPIO_Output
 PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PD14.GPIO_Label=LD5 [Red Led]
+PD14.GPIO_Label=LED_RED
 PD14.GPIO_PuPd=GPIO_NOPULL
 PD14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD14.Locked=true
 PD14.Signal=GPIO_Output
 PD15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PD15.GPIO_Label=LD6 [Blue Led]
+PD15.GPIO_Label=LED_BLUE
 PD15.GPIO_PuPd=GPIO_NOPULL
 PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD15.Locked=true
@@ -170,6 +179,8 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=1600000
 RCC.VCOOutputFreq_Value=384000000
 RCC.VcooutputI2S=160000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
